# pairagen

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  ml.md  selene.toml  vim.yml  vscode.md
.github/workflows/: ci.yml  release.yml
doc/: feeling.md  interactions.md  loopbiotic.txt  pairagen.txt  tags  ui.md  vscode.md
doc/benchmarks/: angular-reactivity-signal-forms.md  project-intelligence-2026-07-20.md
lua/loopbiotic/: apply.lua  card.lua  commands.lua  config.lua  context.lua  creation.lua  diff.lua  extmarks.lua  fileops.lua  flow.lua  health.lua  init.lua  installer.lua  keymaps.lua  log.lua  navigation.lua  permission.lua  positions.lua  pricing.lua  prompt.lua  rpc.lua  scope.lua  selection.lua  session.lua  skills.lua  state.lua  status.lua  surfaces.lua  thinking.lua  ui.lua  util.lua  version.lua  widgets.lua
lua/pair/: apply.lua  card.lua  commands.lua  config.lua  context.lua  diff.lua  extmarks.lua  health.lua  init.lua  installer.lua  keymaps.lua  log.lua  navigation.lua  prompt.lua  rpc.lua  state.lua  status.lua  thinking.lua  ui.lua  version.lua
rust/crates/loopbiotic_backends/: Cargo.toml
rust/crates/loopbiotic_backends/src/: claude_app.rs  codex_app.rs  generic.rs  lib.rs  mock.rs  ollama.rs  openai_compatible.rs  stdio_agent.rs  stream.rs  support.rs
rust/crates/loopbiotic_backends/src/codex_app/: mod.rs  parse.rs  schema.rs  transport.rs
rust/crates/loopbiotic_backends/src/openai_compatible/: responses.rs  tools.rs
rust/crates/loopbiotic_context/: Cargo.toml
rust/crates/loopbiotic_context/src/: index.rs  lib.rs  rank.rs
rust/crates/loopbiotic_context/src/project/: facts.rs  mod.rs  tests.rs
rust/crates/loopbiotic_context/src/project/adapters/: cargo.rs  compose.rs  deno.rs  editor.rs  go.rs  mod.rs  nx.rs  package.rs
rust/crates/loopbiotic_harness/: Cargo.toml
rust/crates/loopbiotic_harness/src/: actions.rs  engine.rs  lib.rs  session.rs  state.rs
rust/crates/loopbiotic_harness/src/engine/: goal.rs  mod.rs  observations.rs  prefetch.rs  tests.rs  turn.rs  validate.rs
rust/crates/loopbiotic_patch/: Cargo.toml
rust/crates/loopbiotic_patch/src/: apply.rs  lib.rs  unified_diff.rs  validate.rs  violation.rs
rust/crates/loopbiotic_protocol/: Cargo.toml
rust/crates/loopbiotic_protocol/src/: agent.rs  card.rs  context.rs  lib.rs  patch.rs  project.rs  rpc.rs
rust/crates/loopbioticd/: Cargo.toml
rust/crates/loopbioticd/src/: ab_report.rs  main.rs  token_report.rs
rust/crates/loopbioticd/tests/: rpc.rs
rust/crates/pair_backends/: Cargo.toml
rust/crates/pair_backends/src/: claude_app.rs  codex_app.rs  generic.rs  lib.rs  mock.rs  ollama.rs  openai_compat.rs  stdio_agent.rs  stream.rs
rust/crates/pair_context/: Cargo.toml
rust/crates/pair_context/src/: lib.rs
rust/crates/pair_harness/: Cargo.toml
rust/crates/pair_harness/src/: actions.rs  engine.rs  lib.rs  session.rs  state.rs
rust/crates/pair_patch/: Cargo.toml
rust/crates/pair_patch/src/: apply.rs  lib.rs  unified_diff.rs  validate.rs
rust/crates/pair_protocol/: Cargo.toml
rust/crates/pair_protocol/src/: agent.rs  card.rs  context.rs  lib.rs  patch.rs  rpc.rs
rust/crates/paird/: Cargo.toml
rust/crates/paird/src/: main.rs
schemas/: loopbiotic-agent-op.schema.json  pair-agent-op.schema.json
scripts/: check-versions.sh  headless-smoke.lua  package-release.sh  project-intelligence-report.sh  token-report.sh
tests/fixtures/project-intelligence/angular-input/: AGENTS.md  ANGULAR.md  case.json  package.json
tests/fixtures/project-intelligence/angular-input/apps/web-angular/src/: title-card.ts
tests/fixtures/project-intelligence/react-bridge/: AGENTS.md  BOUNDARIES.md  case.json
tests/fixtures/project-intelligence/react-bridge/apps/web-angular/: project.json
tests/fixtures/project-intelligence/react-bridge/libs/editor/feature-host/: project.json
tests/fixtures/project-intelligence/react-bridge/libs/editor/feature-host/src/: editor-host.ts
tests/fixtures/project-intelligence/stack-map/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  case.json  deno.json  package.json
tests/fixtures/project-intelligence/stack-map/apps/editor-react/: project.json
tests/fixtures/project-intelligence/stack-map/apps/web-angular/: project.json
tests/fixtures/project-intelligence/stack-map/apps/web-angular/src/: bootstrap.ts
tests/fixtures/project-intelligence/tool-read/: case.json
tests/fixtures/project-intelligence/tool-read/src/: entry.ts
tests/fixtures/token/easy/: case.json  pricing.ts
tests/fixtures/token/hard/: case.json  main.ts  reducer.ts  report.ts  schedule.ts  store.ts  types.ts
tests/fixtures/token/medium/: case.json  inventory.ts  summary.ts  types.ts
tests/lua/: run.lua  test_apply.lua  test_drift.lua  test_fileops.lua  test_flow.lua  test_interactivity.lua  test_navigation.lua  test_permission.lua  test_positions.lua  test_preview_teardown.lua  test_project_skills.lua  test_prompt.lua  test_safety.lua  test_session.lua  test_splits.lua  test_state.lua  test_widgets_creation.lua
