[workspace]
members = [
    "rust/crates/pair_backends",
    "rust/crates/pair_harness",
    "rust/crates/pair_patch",
    "rust/crates/pair_protocol",
    "rust/crates/paird",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
