[workspace]
members = [
    "rust/crates/pair_backends",
    "rust/crates/pair_context",
    "rust/crates/pair_harness",
    "rust/crates/pair_patch",
    "rust/crates/pair_protocol",
    "rust/crates/paird",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Dorian"]
license = "MIT"
repository = "https://github.com/DorianDevp/pairagen"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
