[workspace]
members = [
    "rust/crates/loopbiotic_backends",
    "rust/crates/loopbiotic_context",
    "rust/crates/loopbiotic_harness",
    "rust/crates/loopbiotic_patch",
    "rust/crates/loopbiotic_protocol",
    "rust/crates/loopbioticd",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Dorian"]
license = "MIT"
repository = "https://github.com/DorianDevp/loopbiotic"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
