[package]
name = "loopbiotic_context"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
loopbiotic_protocol = { path = "../loopbiotic_protocol" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
