[package]
name = "pair_backends"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
pair_protocol = { path = "../pair_protocol" }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
