[package]
name = "pair_harness"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
pair_backends = { path = "../pair_backends" }
pair_context = { path = "../pair_context" }
pair_patch = { path = "../pair_patch" }
pair_protocol = { path = "../pair_protocol" }
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
